# second-reader

./: .gitignore  AGENTS.md  Makefile  README.md  railway.json
reading-companion-backend/: .env.example  .gitignore  AGENTS.md  main.py  pyproject.toml  serve.py  serve_dev.py
reading-companion-backend/analysis_reports/: step1_project_health_report.md  step2_resume_highlights.md  step3_gap_check.md
reading-companion-backend/config/: llm_registry.example.json  llm_registry.minimax_legacy_compatible.json  llm_targets.local.example.json
reading-companion-backend/docs/: README.md
reading-companion-backend/eval/: __init__.py  compare_highlights.py  highlight_comparison_ch2.md  highlight_comparison_ch3.md  highlight_comparison_ch3_before_prompt_tuning.md
reading-companion-backend/scripts/: backfill_legacy_outputs.py  check_background_jobs.py  launch_registered_job_detached.py  orchestrate_accumulation_v2_eval.py  orchestrate_active_benchmark_eval.py  orchestrate_excerpt_surface_v1_1_eval.py  orchestrate_post_phase_d_parallel_eval.py  orchestrate_user_level_selective_eval.py  private_library_cleanup_round3.py  register_background_job.py  run_registered_job.py  update_evaluation_catalog.py
reading-companion-backend/src/: __init__.py  config.py
reading-companion-backend/tests/: __init__.py  test_accumulation_benchmark_v1.py  test_accumulation_benchmark_v2.py  test_accumulation_v2_orchestrator.py  test_active_benchmark_orchestrator.py  test_agent_switching_scripts.py  test_attentional_v2_bridge.py  test_attentional_v2_evaluation.py  test_attentional_v2_nodes.py  (+51 more)
(+510 files in other folders)
